syntax = "proto3";

package pb;

import "author.proto";
import "publisher.proto";
import "date.proto";

option go_package = "github.com/khiemta03/bookstore-be/book-service/internal/grpc/gen/book;pb";

message Book {
    string id = 1;
    string title = 2;
    string full_title = 3;
    Publisher publisher = 4;
    google.type.Date publication_date = 5;
    string isbn = 6;
    string description = 7;
    double price = 8;
    int32 stock_quantity = 9;
    string front_cover_image = 10;
    string back_cover_image = 11;
    repeated Author authors = 12;
}